--- a/sdk/tsconfig.json
+++ b/sdk/tsconfig.json
@@ -23,6 +23,6 @@
       "*": ["src/*", "node_modules/*"]
     },
     "esModuleInterop": true,
-    "resolveJsonModule": true
-  }
+    "resolveJsonModule": true,
+  },
 }
