--- a/sdk/package.json
+++ b/sdk/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@ethersproject/address": "^5.0.0",
     "@ethersproject/solidity": "^5.0.0",
+    "@uniswap/sdk-core": "^3.0.0-alpha.1",
     "big.js": "^5.2.2",
     "decimal.js-light": "^2.5.0",
     "jsbi": "^3.1.4",
@@ -32,11 +33,9 @@
     "toformat": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-flow": "^7.12.13",
-    "@babel/preset-flow": "^7.13.13",
     "@types/big.js": "^4.0.5",
     "@types/jest": "^24.0.25",
-    "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/v2-core": "git+https://github.com/valera-shulghin/uniswap-sdk-core.git",
     "babel-plugin-transform-jsbi-to-bigint": "^1.3.1",
     "tsdx": "^0.14.1"
   },
